--- a/src/lib/color-picker/color-picker.component.html
+++ b/src/lib/color-picker/color-picker.component.html
@@ -1,11 +1,13 @@
 <!-- color picker overlay -->
 <ng-container *ngIf="overlay">
-    <button type="button" class="btn-picker" cdkOverlayOrigin #trigger="cdkOverlayOrigin" [ngClass]="{ 'empty': selectedColor === emptyColor }"
+    <button type="button" class="btn-picker" cdkOverlayOrigin #trigger="cdkOverlayOrigin" 
+            [ngClass]="{ 'empty': selectedColor === emptyColor }"
         [style.background]="selectedColor" (click)="toggle()">
         <div class="transparent" *ngIf="selectedColor === emptyColor"></div>
     </button>
 
-    <ng-template cdkConnectedOverlay cdkConnectedOverlayHasBackdrop cdkConnectedOverlayBackdropClass="mcc-color-picker-backdrop"
+    <ng-template cdkConnectedOverlay cdkConnectedOverlayHasBackdrop 
+                 cdkConnectedOverlayBackdropClass="mcc-color-picker-backdrop"
         [cdkConnectedOverlayOrigin]="trigger" [cdkConnectedOverlayOpen]="isOpen" (backdropClick)="backdropClick()">
 
         <ng-template [cdkPortalOutlet]="overlayPanel"></ng-template>
@@ -21,11 +23,13 @@
 
     <div class="mcc-color-picker-overlay mat-elevation-z6" role="dialog" aria-label="Color picker">
 
-        <mcc-color-picker-selector [selectedColor]="tmpSelectedColor$ | async" (changeSelectedColor)="updateTmpSelectedColor($event)"
+        <mcc-color-picker-selector [selectedColor]="tmpSelectedColor$ | async" 
+                                   (changeSelectedColor)="updateTmpSelectedColor($event)"
             [hideHexForms]="hideHexForms" *ngIf="!hideColorPickerSelector">
         </mcc-color-picker-selector>
 
-        <mcc-color-picker-collection *ngIf="!hideUsedColors" [label]="usedColorLabel" [size]="usedSizeColors" [transparent]="!hideTransparent"
+        <mcc-color-picker-collection *ngIf="!hideUsedColors" [label]="usedColorLabel" 
+                                     [size]="usedSizeColors" [transparent]="!hideTransparent"
             [hideEmpty]="hideEmpty" [colors]="usedColors$ | async" (changeColor)="updateTmpSelectedColor($event)">
         </mcc-color-picker-collection>
 
